zephyr/static/styles/zephyr.css
/* ... */
#compose a.message-control-button {
    display: block;
    color: #777;
    text-decoration: none;
    font-size: 14px;
    width: 14px;
    height: 14px;
    margin-right: 5px;
    border-radius: 2px;
    text-align: center;
    float: right;
}

#compose a.message-control-button:hover {
    color: #000;
}

#stream_filters {
    font-weight: normal;
}

#stream_filters .inactive_stream {
    opacity: .5;
}

#bots_list {
    display: none;
    font-size: 90%;
    list-style-type: none;
    width: 550px;
    margin-left: 0px;
}

#bots_list .image, 
#bots_list .bot_info {
    display: inline-block;
    margin: 10px;
}

#bots_list .image {
    vertical-align: top;
}

#bots_list .name {
    font-weight: bold;
    font-size: 130%;
}

#bots_list .field:after {
    content: ':';
}

.bot_info .field {
    width: 7em;
    display: inline-block;
}

#create_bot_form .control-label {
    width: 10em;
    text-align: left;
    margin-right: 3px;
}

#create_bot_button {
    margin-left: 24em;
}

#bot_avatar_clear_button {
    display: none;
}

#create_bot_name {
    width: 20em;
}

#create_bot_short_name {
    width: 7em;
}

.bot_name_header {
    width: 8em;
}

#bots_list img.avatar {
    height: 35px;
    width: 35px;
}

#bots_list .email .value,
#bots_list .api_key .value {
    font-family: monospace;
    font-size: 85%;
}

#onboarding-header {
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}
#onboarding-checklist {
    font-size: 14px;
    border: 1px solid #ddd;
    background-color: #F7F7F7;
    padding: 10px;
}
#onboarding {
    display: none;
}

.onboarding_success {
    font-size: 40px;
    color: #00CC00;
    text-align: center;
}

#sticky-popover h1 {
    text-align: center;
}
.done-button {
    text-align: center;
}
.sticky-popover-inner {
    max-width: 300px;
}
.sticky-popover-inner p {
    padding-bottom: 5px;
}

#feedback_section {
    text-align: center;
    padding-bottom: 10px;
}

.message_edit {
    display: none;
}

/* Reduce some of the heavy padding from Bootstrap. */
#message_edit_form .edit-control-label {
    width: auto;
    float: left;
}
#message_edit_form .edit-controls {
    margin-left: 50px;
}
#message_edit_form textarea {
    width: 90%;
    min-width: 206px;
}

.message_edit_notice {
    font-size: 11px;
}

.message_body_gravatar {
    width: 20px;
    height: 20px;
    margin: 2px 2px 2px 0px;
    border: 1px solid #000;
}

.user-mention {
    background-color: #eee;
    border-radius: 3px;
    padding: 0 0.2em;
    border: 1px solid #ccc;
    white-space: nowrap;
    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0)));
    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
}

.user-mention-me {
    background-color: #c9fcc1;
}

#notification-settings .control-group {
    margin-bottom: 5px;
}

#notification-settings .control-label {
    width: 280px;
    text-align: left;
}

#pin_info_question {
    padding-left: 3px;
}
#pin_info_question:hover {
    cursor:  pointer;
}

.zero_count {
    display: none;
}

.message-pane {
    padding-left: 0.3em;
}

.screen {
    position: absolute;
    left: 0;
    top: 0;
    background: #000;
    z-index: 20000;
}

.tutorial-popover {
    width: 200px;
}

#tutorial-stream {
    width: 250px;
}

#tutorial-subject {
    width: 250px;
}
.tutorial-done-button {
    text-align: right;
}

