Prevent mention overlaps
(imported from commit e39e9e00f7304d4b811169a5075c5dd98dadad61)

--- a/zephyr/static/styles/zephyr.css
+++ b/zephyr/static/styles/zephyr.css
@@ -1965,6 +1965,8 @@ li.expanded_subject {
     background-image: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
     background-image: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
+    display: inline-block;
+    margin-bottom: 1px;
 }
 
 .user-mention-me {
